--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,26 +4,26 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/home"
-        android:title="" />
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/nav_search"
         android:icon="@drawable/search"
-        android:title="" />
+        android:title="@string/title_search" />
 
     <item
         android:id="@+id/nav_add_post"
         android:icon="@drawable/add_image_icon"
-        android:title="" />
+        android:title="@string/title_add_post" />
 
     <item
         android:id="@+id/nav_notifications"
         android:icon="@drawable/heart"
-        android:title="" />
+        android:title="@string/title_notification" />
 
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/profile_icon"
-        android:title="" />
+        android:title="@string/title_profile" />
 
 </menu>
