--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -40,6 +40,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:layout_marginEnd="15dp"
+                    android:autofillHints="search"
+                    android:inputType="text"
                     android:textColor="@color/colorPrimary"
                     android:hint="@string/search"
                     android:layout_toEndOf="@+id/search_fragment_icon"
