--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/search_fragment_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:contentDescription="@string/search"
                     android:src="@drawable/search"
                     />
 
