--- a/app/src/main/res/drawable/buttons_background.xml
+++ b/app/src/main/res/drawable/buttons_background.xml
@@ -5,13 +5,12 @@
     >
 
 
-    <corners android:radius="4dp"></corners>
+    <corners android:radius="4dp" />
 
 
-
-    <stroke android:width="3dp"
-        android:color="@color/colorPrimary"
-        ></stroke>
+    <stroke
+        android:width="3dp"
+        android:color="@color/colorPrimary" />
 
 
 </shape>
