--- a/app/src/main/res/drawable/inputs_background.xml
+++ b/app/src/main/res/drawable/inputs_background.xml
@@ -5,13 +5,13 @@
     >
 
 
-    <corners android:radius="4dp"></corners>
-    <solid android:color="#eee"></solid>
+    <corners android:radius="4dp" />
+    <solid android:color="#eee" />
 
 
-    <stroke android:width="1dp"
-        android:color="@color/colorPrimaryDark"
-        ></stroke>
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorPrimaryDark" />
 
 
 </shape>
