--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,6 +29,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/profile_fragment_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:maxLines="1"
+                android:text="@string/username"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ImageView
                     android:id="@+id/options_view"
@@ -75,7 +85,6 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:src="@drawable/profile"
-
                     />
 
                 <LinearLayout
@@ -237,7 +246,7 @@
                     android:id="@+id/images_grid_view_btn"
                     android:layout_width="1dp"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/images_grid_view_btn"
+                    android:contentDescription="@string/images_grid_view_button"
                     android:src="@drawable/grid"
                     android:layout_weight="1"
                     style="?android:attr/buttonBarButtonStyle"
