--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/nav_add_post"
-        android:icon="@drawable/add_image_icon"
+        android:icon="@drawable/add"
         android:title="@string/title_add_post" />
 
     <item
